--- a/views/index.html
+++ b/views/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/public/style.css">
+    <title>Lista de Tarefas</title>
 </head>
 <body>
-    <h2>Ola <%= nome %>!</h2>
+    <div class="tarefas">
+        <% for(let i = 0; i < tarefasList.length; i++){ %>
+
+            <p><%= tarefasList[i] %> | <a href="/deletar/<%= i %>">X</a></p>
+
+        <% } %>    
+    </div>
 </body>
 </html>
