--- a/views/index.html
+++ b/views/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/public/style.css">
     <title>Lista de Tarefas</title>
 </head>
 <body>
     <div class="tarefas">
+        <form method="post">
+            <input type="text" name="tarefa" />
+            <input type="submit" name="acao" value="Inserir" />
+        </form>
         <% for(let i = 0; i < tarefasList.length; i++){ %>
 
             <p><%= tarefasList[i] %> | <a href="/deletar/<%= i %>">X</a></p>
