--- a/views/index.html
+++ b/views/index.html
@@ -6,15 +6,24 @@
 </head>
 <body>
     <div class="tarefas">
-        <form method="post">
-            <input type="text" name="tarefa" />
-            <input type="submit" name="acao" value="Inserir" />
-        </form>
-        <% for(let i = 0; i < tarefasList.length; i++){ %>
+        <div class="titulo">
+            <h1 class="titulo_app">Lista de Tarefas</h1>
+        </div>
+        <div class="form">
+            <p class="add_tarefa">Adicionar Tarefa</p>
+            <form method="post">
+                <input type="text" name="tarefa" class="tarefa" />
+                <input type="submit" name="acao" value="Inserir" class="acao" />
+            </form>
+        </div>
+        <div class="listagem">
+            <% for(let i = 0; i < tarefasList.length; i++){ %>
 
-            <p><%= tarefasList[i] %> | <a href="/deletar/<%= i %>">X</a></p>
+                <p class="nome_tarefa"><%= tarefasList[i] %> </p>
+                <a class="btn_remover" href="/deletar/<%= i %>">Remover</a>
 
-        <% } %>    
+            <% } %>    
+        </div>
     </div>
 </body>
 </html>
